spring is coming

--- a/_posts/2022-03-31-2022-start.md
+++ b/_posts/2022-03-31-2022-start.md
@@ -3,14 +3,16 @@ layout:     post
 title:      "2022-start"
 subtitle:   "拥抱四月"
 date:       2022-03-31 21:50:00
-author:     "Mickey"
+author:     "xpengkang"
 header-img: "img/post-bg-april.jpg"
 tags:
     - 生活
 ---
 
-今天刚刚好是四月的生日，就是上面背景这只猫，为什么叫四月呢，因为明天是四月，两年前的3.31号收养的它，取名为 四月。
+今天刚刚好是四月的生日，就是上面这只猫，为什么叫四月呢，因为明天是四月，两年前的3.31号收养的它，取名为 四月。
 
 [Fresh start month](https://www.alexajade.co.uk/10-reasons-to-love-april/) 
 
-I am not 100% sure why, but I have always thought of April as a month of fresh starts, apparently, I am not the only one. we are now 4 months clear of the Christmas season and it is a few months of enjoying the sun and the happy season before we prepare for cold winter months again! The first day of spring has now been and its time for a spring clean, mentally as well.
+I am not 100% sure why, but I have always thought of April as a month of fresh starts
+
+The first day of spring has now been and its time for a spring clean, mentally as well.
