--- a/_posts/2021-12-22-我的2021年秋招-材料转码总结2.md
+++ b/_posts/2021-12-22-我的2021年秋招-材料转码总结2.md
@@ -4,7 +4,7 @@ title:      "我的2021年秋招-材料转码总结2"
 subtitle:   "材料转码"
 date:       2021-12-24 21:50:00
 author:     "xpengkang"
-header-img: "img/post-bg-graphene.jpg"
+header-img: 
 tags:
     - 求职
 ---
