--- a/_posts/2022-04-12-孤勇者.md
+++ b/_posts/2022-04-12-孤勇者.md
@@ -10,7 +10,10 @@ tags:
 ---
 ## 被抗癌作词家唐恬所感动
 
-[https://www.bilibili.com/video/BV1iS4y1P7we?spm_id_from=333.1007.top_right_bar_window_history.content.click](https://www.bilibili.com/video/BV1iS4y1P7we?spm_id_from=333.1007.top_right_bar_window_history.content.click)
+### 听听他的故事吧
+
+<iframe src="https://www.bilibili.com/video/BV1iS4y1P7we?spm_id_from=333.1007.top_right_bar_window_history.content.click" width="700" height="500"></iframe>
+
 
 ![Untitled](/img/in-post/1.png)
 
@@ -20,7 +23,5 @@ tags:
 
 ## **听一下原唱吧！enjoy it.**
 
-[https://www.bilibili.com/video/BV1wr4y1y7nx?spm_id_from=333.337.search-card.all.click](https://www.bilibili.com/video/BV1wr4y1y7nx?spm_id_from=333.337.search-card.all.click)
 
-
-<iframe src="https://www.bilibili.com/video/BV1wr4y1y7nx?spm_id_from=333.337.search-card.all.click" width="800" height="500"></iframe>
+<iframe src="https://www.bilibili.com/video/BV1wr4y1y7nx?spm_id_from=333.337.search-card.all.click" width="700" height="500"></iframe>
