--- a/_posts/2022-04-12-孤勇者.md
+++ b/_posts/2022-04-12-孤勇者.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "孤勇者"
-subtitle:   
+subtitle:   "都，是勇敢的"
 date:       2022-04-12 08:00:00
 author:     "xpengkang"
 header-img:
@@ -10,7 +10,7 @@ tags:
 ---
 ## 被抗癌作词家唐恬所感动
 
-### 听听他的故事吧
+### 听听她的故事吧
 
 <iframe src="https://www.bilibili.com/video/BV1iS4y1P7we?spm_id_from=333.1007.top_right_bar_window_history.content.click" width="700" height="500"></iframe>
 
